--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
@@ -21,11 +22,13 @@
     "react-native-animatable": "^1.4.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-pager-view": "^6.3.3",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
